// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app1. no pages 1`] = `Array []`;

exports[`app1. no pages 2`] = `
"// Generated by nuxt-js-links-generator@0.1.1
"
`;

exports[`app1. no pages 3`] = `
"\\"use strict\\";
// Generated by nuxt-js-links-generator@0.1.1

module.exports = {}"
`;

exports[`app2 1`] = `
Array [
  "function servicesPage() { return \\"/services\\" }",
  "function servicesOptionsPage() { return \\"/services/options\\" }",
]
`;

exports[`app2 2`] = `
"// Generated by nuxt-js-links-generator@0.1.1
export function servicesPage() { return \\"/services\\" }
export function servicesOptionsPage() { return \\"/services/options\\" }"
`;

exports[`app2 3`] = `
"\\"use strict\\";
// Generated by nuxt-js-links-generator@0.1.1
function servicesPage() { return \\"/services\\" }
function servicesOptionsPage() { return \\"/services/options\\" }
module.exports = {servicesPage, servicesOptionsPage}"
`;

exports[`app3 1`] = `
Array [
  "function customerById(_id: any) { return \`/customer/\${_id}\` }",
  "function servicesById(_id: any) { return \`/services/\${_id}\` }",
  "function servicesIdByTypeAndIndex(_type: any, _index: any) { return \`/services/\${_type}/id/\${_index}\` }",
  "function servicesPage() { return \\"/services\\" }",
]
`;

exports[`app3 2`] = `
"// Generated by nuxt-js-links-generator@0.1.1
export function customerById(_id: any) { return \`/customer/\${_id}\` }
export function servicesById(_id: any) { return \`/services/\${_id}\` }
export function servicesIdByTypeAndIndex(_type: any, _index: any) { return \`/services/\${_type}/id/\${_index}\` }
export function servicesPage() { return \\"/services\\" }"
`;

exports[`app3 3`] = `
"\\"use strict\\";
// Generated by nuxt-js-links-generator@0.1.1
function customerById(_id: any) { return \`/customer/\${_id}\` }
function servicesById(_id: any) { return \`/services/\${_id}\` }
function servicesIdByTypeAndIndex(_type: any, _index: any) { return \`/services/\${_type}/id/\${_index}\` }
function servicesPage() { return \\"/services\\" }
module.exports = {customerById, servicesById, servicesIdByTypeAndIndex, servicesPage}"
`;
